GROOVY-11492, GROOVY-11845: curly brace array for attribute default